@@ -536,6 +536,7 @@ MARK_VISIBLE (gcry_sexp_sprint)
 MARK_VISIBLE (gcry_sexp_sscan)
 MARK_VISIBLE (gcry_sexp_vlist)
 
+MARK_VISIBLEX(gcry_mpi_abs)
 MARK_VISIBLE (gcry_mpi_add)
 MARK_VISIBLE (gcry_mpi_add_ui)
 MARK_VISIBLE (gcry_mpi_addm)
@@ -561,12 +562,14 @@ MARK_VISIBLE (gcry_mpi_gcd)
 MARK_VISIBLE (gcry_mpi_get_flag)
 MARK_VISIBLE (gcry_mpi_get_nbits)
 MARK_VISIBLE (gcry_mpi_get_opaque)
+MARK_VISIBLEX(gcry_mpi_is_neg)
 MARK_VISIBLE (gcry_mpi_invm)
 MARK_VISIBLE (gcry_mpi_mod)
 MARK_VISIBLE (gcry_mpi_mul)
 MARK_VISIBLE (gcry_mpi_mul_2exp)
 MARK_VISIBLE (gcry_mpi_mul_ui)
 MARK_VISIBLE (gcry_mpi_mulm)
+MARK_VISIBLEX(gcry_mpi_neg)
 MARK_VISIBLE (gcry_mpi_new)
 MARK_VISIBLE (gcry_mpi_point_get)
 MARK_VISIBLE (gcry_mpi_point_new)
